Stylesheet/emote/tag updates 2013-10-16

--- a/source-css/babsquisition.css
+++ b/source-css/babsquisition.css
@@ -645,6 +645,35 @@ a[href|="/ubuntu"] {
  background-position: -0px -930px; 
 }
 
+a[href|="/mrbones"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 200px;
+ height: 203px;
+ background-image:url(%%stylesheet2%%);
+ background-position: -0px -0px; 
+}
+
+a[href|="/therideneverends"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 246px;
+ height: 214px;
+ background-image:url(%%stylesheet2%%);
+ background-position: -0px -204px; 
+}
+
+a[href|="/themoreyouknow"] {  
+ display: block;
+ clear: none;
+ float: left;
+ width: 320px;
+ height: 224px;
+ background-image:url(%%themoreyouknow%%);
+}
+
 /*  Colors to know:  
     #eadb64 - Tabmenu background  
     #3f2520 - The brown in the top thingy  
