--- a/source-css/comeinside.css
+++ b/source-css/comeinside.css
@@ -87,43 +87,42 @@ body, .side,.flairtoggle,.submit .spacer,.create .spacer,.icon-menu a,.nub { bac
     background-color: transparent!important;
     height: 100%; 
 }
-
-.side .usertext[id$="a"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:522px; height:400px; background-position: -2px -806px  !important}
-.side .usertext[id$="b"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -2px -1610px  !important}
-.side .usertext[id$="c"] a[href="/cibg-pony"] { background:url(%%cibg%%);  width:531px; height:400px; background-position: -526px -806px !important}
-.side .usertext[id$="d"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:535px; height:400px; background-position: -2px -1208px !important}
-.side .usertext[id$="e"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -631px -1610px  !important}
-.side .usertext[id$="f"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:430px; height:400px; background-position: -2px -2px  !important}
-.side .usertext[id$="g"] a[href="/cibg-pony"] { background:url(%%cibg%%);  width:486px; height:400px; background-position: -480px -404px !important}
-.side .usertext[id$="h"] a[href="/cibg-pony"] {background:url(%%cibg%%) ;  width:457px; height:400px; background-position: -1317px -2px !important}
-.side .usertext[id$="i"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:531px; height:400px; background-position: -1059px -806px !important}
-.side .usertext[id$="j"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:518px; height:400px; background-position: -1471px -404px !important;}
-.side .usertext[id$="k"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:434px; height:400px; background-position: -434px -2px !important;}
-.side .usertext[id$="l"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:537px; height:400px; background-position: -539px -1208px!important;}
-.side .usertext[id$="m"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:552px; height:400px; background-position: -1078px -1208px !important;}
-.side .usertext[id$="n"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:445px; height:400px; background-position: -870px -2px!important;}
-.side .usertext[id$="o"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:501px; height:400px; background-position: -968px -404px !important;}
-.side .usertext[id$="p"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:476px; height:400px; background-position: -2px -404px !important;}
-.side .usertext[id$="q"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:522px; height:400px; background-position: -2px -806px!important;}
-.side .usertext[id$="r"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -2px -1610px !important;}
-.side .usertext[id$="s"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:531px; height:400px; background-position: -526px -806px !important;}
-.side .usertext[id$="t"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:535px; height:400px; background-position: -2px -1208px!important}
-.side .usertext[id$="u"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -631px -1610px!important;}
-.side .usertext[id$="v"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:430px; height:400px; background-position: -2px -2px!important;}
-.side .usertext[id$="w"] a[href="/cibg-pony"] { background:url(%%cibg%%);  width:457px; height:400px; background-position: -1317px -2px!important;}
-.side .usertext[id$="x"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:486px; height:400px; background-position: -480px -404px !important;}
-.side .usertext[id$="y"] a[href="/cibg-pony"] { background:url(%%cibg%%);  width:531px; height:400px; background-position: -1059px -806px!important;}
-.side .usertext[id$="z"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:434px; height:400px; background-position: -434px -2px!important;}
-.side .usertext[id$="0"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:518px; height:400px; background-position: -1471px -404px !important;}
-.side .usertext[id$="1"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:531px; height:400px; background-position: -1059px -806px!important;}
+.side .usertext[id$="a"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:497px; height:400px; background-position: -1061px -816px !important}
+.side .usertext[id$="b"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:484px; height:400px; background-position: -509px -1218px  !important}
+.side .usertext[id$="c"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:505px; height:400px; background-position: -2px -1218px !important}
+.side .usertext[id$="d"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:447px; height:410px; background-position: -2px -2px !important}
+.side .usertext[id$="e"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:541px; height:410px; background-position: -926px -2px !important}
+.side .usertext[id$="f"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:473px; height:410px; background-position: -451px -2px !important}
+.side .usertext[id$="g"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:598px; height:400px; background-position: -2px -816px !important}
+.side .usertext[id$="h"] a[href="/cibg-pony"] { background:url(%%cibg2%%) ; width:512px; height:400px; background-position: -1116px -414px!important}
+.side .usertext[id$="i"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:537px; height:400px; background-position: -2px -414px !important}
+.side .usertext[id$="j"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:573px; height:400px; background-position: -541px -414px !important;}
+.side .usertext[id$="k"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:556px; height:400px; background-position: -1469px -2px !important;}
+.side .usertext[id$="l"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:268px; height:200px; background-position: -995px -1218px!important;}
+.side .usertext[id$="m"] a[href="/cibg-pony"] { background:url(%%cibg2%%);width:457px; height:400px; background-position: -602px -816px !important;}
+.side .usertext[id$="n"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:522px; height:400px; background-position: -2px -806px!important;}
+.side .usertext[id$="o"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:531px; height:400px; background-position: -526px -806px !important;}
+.side .usertext[id$="p"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:535px; height:400px; background-position: -2px -1208px !important;}
+.side .usertext[id$="q"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:430px; height:400px; background-position: -2px -2px!important;}
+.side .usertext[id$="r"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:457px; height:400px; background-position: -1317px -2px!important;}
+.side .usertext[id$="s"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:486px; height:400px; background-position: -480px -404px !important;}
+.side .usertext[id$="t"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:531px; height:400px; background-position: -1059px -806px!important}
+.side .usertext[id$="u"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:518px; height:400px; background-position: -1471px -404px!important;}
+.side .usertext[id$="v"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:434px; height:400px; background-position: -434px -2px!important;}
+.side .usertext[id$="w"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:537px; height:400px; background-position: -539px -1208px!important;}
+.side .usertext[id$="x"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:552px; height:400px; background-position: -1078px -1208px !important;}
+.side .usertext[id$="y"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:445px; height:400px; background-position: -870px -2px!important;}
+.side .usertext[id$="z"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:501px; height:400px; background-position: -968px -404px!important;}
+.side .usertext[id$="0"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:476px; height:400px; background-position: -2px -404px!important;}
+.side .usertext[id$="1"] a[href="/cibg-pony"] { background:url(%%cibg2%%); width:637px; height:400px; background-position: -1312px -1246px!important;}
 .side .usertext[id$="2"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:486px; height:400px; background-position: -480px -404px !important;}
 .side .usertext[id$="3"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:457px; height:400px; background-position: -1317px -2px!important;}
 .side .usertext[id$="4"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:430px; height:400px; background-position: -2px -2px !important;}
-.side .usertext[id$="5"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -631px -1610px!important;}
+.side .usertext[id$="5"] a[href="/cibg-pony"] { background:url(%%cibg2%%);width:505px; height:400px; background-position: -2px -1218px!important;}
 .side .usertext[id$="6"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:535px; height:400px; background-position: -2px -1208px!important;}
-.side .usertext[id$="7"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:627px; height:400px; background-position: -2px -1610px!important }
+.side .usertext[id$="7"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:476px; height:400px; background-position: -2px -404px!important }
 .side .usertext[id$="8"] a[href="/cibg-pony"] { background:url(%%cibg%%);width:522px; height:400px; background-position: -2px -806px!important;}
-.side .usertext[id$="9"] a[href="/cibg-pony"] { background:url(%%cibg%%); width:531px; height:400px; background-position: -526px -806px !important;}
+.side .usertext[id$="9"] a[href="/cibg-pony"] { background:url(%%cibg2%%);width:512px; height:400px; background-position: -1116px -414px!important;}
 
 /* Nightmode fixes for the background */
 .content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;} 
@@ -132,6 +131,28 @@ body.res-nightmode:first-of-type > .content {background-color: transparent!impor
 
 
 /* ------ Emotes! --------- */
+
+a[href|='/ablie'], a[href|='/babs'], a[href|='/bestprincess'], a[href|='/blobbieshy'], a[href|='/creepaloo'], a[href|='/partyshy'], a[href|='/ppgrump'], a[href|='/rdlie'], a[href|='/seriouspie'], a[href|='/spooked'], a[href|='/twilie'], a[href|='/vslie'], a[href|='/whoovescake'] {
+    display: block;
+    clear: none;
+    float: left;
+    background-image: url(%%esheet%%)
+    } 
+
+a[href|='/ablie'] {width:135px; height:120px; background-position: -357px -2px}
+a[href|='/babs'] {width:105px; height:120px; background-position: -250px -2px}
+a[href|='/bestprincess'] {width:128px; height:200px; background-position: -274px -428px}
+a[href|='/blobbieshy'] {width:136px; height:100px; background-position: -2px -2px}
+a[href|='/creepaloo'] {width:108px; height:120px; background-position: -140px -2px}
+a[href|='/partyshy'] {width:168px; height:150px; background-position: -140px -276px}
+a[href|='/ppgrump'] {width:116px; height:150px; background-position: -156px -428px}
+a[href|='/rdlie'] {width:152px; height:150px; background-position: -2px -428px}
+a[href|='/seriouspie'] {width:140px; height:125px; background-position: -2px -124px}
+a[href|='/spooked'] {width:127px; height:150px; background-position: -310px -276px}
+a[href|='/twilie'] {width:136px; height:150px; background-position: -2px -276px}
+a[href|='/vslie'] {width:153px; height:150px; background-position: -269px -124px}
+a[href|='/whoovescake'] {width:123px; height:125px; background-position: -144px -124px}
+
 
 a[href|='/ajsquee'], a[href|='/appleyell'], a[href|='/bonsocks'], a[href|='/chuck'], a[href|='/dashing'], a[href|='/dashoh'], a[href|='/ldready'], a[href|='/lyracute'], a[href|='/motherofgod'], a[href|='/notathing'], a[href|='/notcool'], a[href|='/notsureifwant'], a[href|='/sbcool'], a[href|='/scootacool'], a[href|='/shyreally'], a[href|='/spikesmug'], a[href|='/sureh'], a[href|='/trixoh'], a[href|='/ttshrug'], a[href|='/twising'] {
     display: block;
@@ -185,7 +206,7 @@ a[href|='/teeth'] {width:118px; height:135px; background-position: -369px -2px}
 a[href|='/twiumm'] {width:110px; height:120px; background-position: -2px -2px}
 
 
-a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|='/mylifeisinshambles'], a[href|='/ohgosh'], a[href|='/ppshiggy'], a[href|='/ppsmirk'], a[href|='/scootafied'], a[href|='/scootafried'], a[href|='/sleepymac'], a[href|='/stitchbystitch'], a[href|='/surstageleft'], a[href|='/tavisalute'], a[href|='/thebaz'], a[href|='/twiface'], a[href|='/twilongdidntread'], a[href|='/bjshrug'], a[href|='/rbjshrug'] {
+a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|='/mylifeisinshambles'], a[href|='/ohgosh'], a[href|='/ppshiggy'], a[href|='/ppsmirk'], a[href|='/scootafied'], a[href|='/scootafried'], a[href|='/sleepymac'], a[href|='/stitchbystitch'], a[href|='/surstageleft'], a[href|='/tavisalute'], a[href|='/thebaz'], a[href|='/twiface'], a[href|='/twilongdidntread'], a[href|='/bjshrug'], a[href|='/rbjshrug'], a[href|='/flare'],a[href|='/hehehehe'] {
     display: block;
     clear: none;
     float: left;
@@ -193,23 +214,26 @@ a[href|='/gotobread'], a[href|='/haveacookie'], a[href|='/horseonfire'], a[href|
     }
 
 
-a[href|='/gotobread'] {width:185px; height:120px; background-position: -2px -124px}
-a[href|='/haveacookie'] {width:150px; height:150px; background-position: -2px -555px}
-a[href|='/horseonfire'] {width:190px; height:125px; background-position: -2px -251px}
-a[href|='/mylifeisinshambles'] {width:122px; height:150px; background-position: -154px -555px}
-a[href|='/ohgosh'] {width:188px; height:125px; background-position: -189px -124px}
-a[href|='/ppshiggy'] {width:137px; height:120px; background-position: -223px -2px}
-a[href|='/ppsmirk'] {width:110px; height:120px; background-position: -111px -2px}
-a[href|='/scootafied'], a[href|='/scootafried'] {width:107px; height:110px; background-position: -2px -2px}
-a[href|='/sleepymac'] {width:206px; height:175px; background-position: -278px -555px}
-a[href|='/stitchbystitch'] {width:141px; height:150px; background-position: -291px -403px}
-a[href|='/surstageleft'] {width:134px; height:150px; background-position: -155px -403px}
-a[href|='/tavisalute'] {width:155px; height:150px; background-position: -194px -251px}
-a[href|='/thebaz'] {width:114px; height:150px; background-position: -351px -251px}
-a[href|='/twiface'] {width:151px; height:150px; background-position: -2px -403px}
-a[href|='/twilongdidntread'] {width:176px; height:200px; background-position: -2px -732px}
-a[href|='/bjshrug'] {width:73px; height:70px; background-position: -206px -811px}
-a[href|='/rbjshrug'] {width:73px; height:70px; background-position: -206px -883px}
+a[href|='/bjshrug'] {width:73px; height:70px; background-position: -77px -2px}
+a[href|='/flare'] {width:108px; height:150px; background-position: -899px -129px}
+a[href|='/gotobread'] {width:185px; height:120px; background-position: -512px -2px}
+a[href|='/haveacookie'] {width:150px; height:150px; background-position: -2px -281px}
+a[href|='/hehehehe'] {width:500px; height:250px; background-position: -2px -483px}
+a[href|='/horseonfire'] {width:190px; height:125px; background-position: -2px -129px}
+a[href|='/mylifeisinshambles'] {width:122px; height:150px; background-position: -154px -281px}
+a[href|='/ohgosh'] {width:188px; height:125px; background-position: -699px -2px}
+a[href|='/ppshiggy'] {width:137px; height:120px; background-position: -261px -2px}
+a[href|='/ppsmirk'] {width:110px; height:120px; background-position: -400px -2px}
+a[href|='/rbjshrug'] {width:73px; height:70px; background-position: -2px -2px}
+a[href|='/scootafied'] {width:107px; height:110px; background-position: -152px -2px}
+a[href|='/sleepymac'] {width:206px; height:175px; background-position: -278px -281px}
+a[href|='/stitchbystitch'] {width:141px; height:150px; background-position: -640px -129px}
+a[href|='/surstageleft'] {width:134px; height:150px; background-position: -504px -129px}
+a[href|='/tavisalute'] {width:155px; height:150px; background-position: -347px -129px}
+a[href|='/thebaz'] {width:114px; height:150px; background-position: -783px -129px}
+a[href|='/twiface'] {width:151px; height:150px; background-position: -194px -129px}
+a[href|='/twiface']:hover {width:300px; height:300px; background-position: -504px -483px}
+a[href|='/twilongdidntread'] {width:176px; height:200px; background-position: -486px -281px}
 
 a[href|="/iamafillyandwhatisthis"]
 {display:block;clear:none;float:left;width:65px;height:100px;background-image:url(%%iamafilly%%)!important}
@@ -220,10 +244,6 @@ a[href|="/iamafillyandwhatisthis"]
 {background-position:-2px -103px}
 .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="o"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="p"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="q"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="r"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="s"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="t"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="u"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="v"] + .usertext-body a[href="/iamafillyandwhatisthis"],.usertext input[value$="y"] 
 {background-position:-2px -204px}
-
-
-
-a[href|='/hehehehe'] { width:500px; height:250px; background-image: url(%%hehehehe%%);  display: block; clear: none; float: left;}
 
 
 a[href|='/partydance'] { width:130px; height:150px; background-image: url(%%partydance%%);  display: block; clear: none; float: left;}
@@ -379,14 +399,14 @@ visibility:visible!important;
 }
 
 /*and the replacement*/
-a.author[href$=EvanMacIan]:before {content:"EwanMacIan"}
+a.author[href$=EvanMacIan]:before {content:"Mr. Califag MacIan"}
 
 a.author[href$=SirCinnamon]:before {content:"King Cinnamon"}
 a.author[href$=XelNaga]:before {content:"Twi`Naga"}
 a.author[href$=Princess_Molestia_]:before {content:"Princess Molestia"}
 a.author[href$=V17Ds]:before {content:"SkiftSwii"}
 a.author[href$=ZZW30]:before {content:"CaptChuckles"}
-a.author[href$="derram_2"]:before {content:"derramina Diane Pie"}
+a.author[href$="derram_2"]:before {content:"derram"}
 a.author[href$=CodenameToon]:before {content:"Coggler"}
 a.author[href$=Jeroknite]:before {content:"JokerTine"; font-size:15px !important}
 a.author[href$="0x_"]:before {content:"Just Ox"}
@@ -404,6 +424,8 @@ letter-spacing:normal;
 a.author[href$="videogamewonder"]:after {content:" (le)teral fempire shill"}
 
 
+
+.sidecontentbox a.author[href$="derram_2"]:before { font-size: 10pt !important; }
 
 
 
