--- a/source-css/falloutequestria.css
+++ b/source-css/falloutequestria.css
@@ -399,13 +399,13 @@ a[href|="/vrcrazy"]{background-position: -240px -750px; width: 70px; height: 70p
 a[href|="/lplie"]{background-position: -240px -870px; width: 100px; height: 100px; }
 
 
-a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"], a[href|="/glimmerplotting"], a[href|="/glimmersqueeze"], a[href|="/glimmerwink"], a[href|="/bjfilly"], a[href|="/gofish"], a[href|="/bjsalute"], a[href|="/bjwat"], a[href|="/glorystretch"]
+a[href|="/velvetfilly"], a[href|="/bjdrunk"], a[href|="/bjpounce"], a[href|="/bjsearch"], a[href|="/bjseriously"], a[href|="/bjsmile"], a[href|="/lpblush"], a[href|="/glimmergrin"], a[href|="/murkybsod"], a[href|="/murkyhappy"], a[href|="/murkyplease"], a[href|="/glimmerplotting"], a[href|="/glimmersqueeze"], a[href|="/glimmerwink"], a[href|="/bjfilly"], a[href|="/gofish"], a[href|="/bjsalute"], a[href|="/bjwat"], a[href|="/glorystretch"], a[href|="/lpshooty"], a[href|="/lpstretch"], a[href|="/lpdisgust"], a[href|="/lpheroic"], a[href|="/lpsmug"]
 {
 display: block;
 clear: none;
 float: left;
 background-repeat: no-repeat;
-background-image: url(%%foe-em6-v9%%);
+background-image: url(%%foe-em6-v10%%);
 }
 a[href|="/bjdrunk"]{background-position: 0 0; width: 119px; height: 77px; }
 a[href|="/bjpounce"]{ background-position: 0 -127px; width: 150px; height: 79px; }
@@ -425,8 +425,22 @@ a[href|="/bjfilly"], a[href|="/gofish"]{ background-position: -200px -150px; wid
 a[href|="/bjsalute"]{ background-position: -200px -330px; width: 136px; height: 100px }
 a[href|="/bjwat"]{ background-position: -200px -480px; width: 78px; height: 100px; }
 a[href|="/glorystretch"]{ background-position: -200px -630px; width: 163px; height: 100px; }
+a[href|="/lpshooty"], a[href|="/lpsmug"] {background-position: -200px -780px; width: 85px; height: 150px; }
+a[href|="/lpstretch"]{ background-position: -200px -980px; width: 171px; height: 150px; }
+a[href|="/lpdisgust"]{ background-position: -200px -1180px; width: 146px; height: 150px; }
+a[href|="/lpheroic"]{ background-position: -200px -1380px; width: 123px; height: 150px; }
 
-
+a[href|="/lpdowncast"], a[href|="/steelhoovesrear"], a[href|="/rampagesmug"]
+{
+display: block;
+clear: none;
+float: left;
+background-repeat: no-repeat;
+background-image: url(%%foe-em7-v05%%);
+}
+a[href|="/lpdowncast"]{ background-position: -0px -0px; width: 172px; height: 150px; }
+a[href|="/steelhoovesrear"]{ background-position: 0 -200px; width: 120px; height: 175px; }
+a[href|="/rampagesmug"]{ background-position: 0 -425px; width: 67px; height: 70px; }
 
 a[href|="/advicebj"]
 {
