--- a/source-css/mlploungesteamgroup.css
+++ b/source-css/mlploungesteamgroup.css
@@ -414,7 +414,8 @@ a.author[href$="Dwarflord"]:after,
 a.author[href$="sna_fu_bar"]:after,
 a.author[href$="starkinmn"]:after,
 a.author[href$="TheCommieDuck"]:after,
-a.author[href$="Broken_Wagonwheel"]:after
+a.author[href$="Broken_Wagonwheel"]:after,
+a.author[href$="Dundrioundio"]:after
 
 {   border-radius: 4px;
     margin-left: 4px;
@@ -440,6 +441,7 @@ a.author[href$="HatzHeartsIcecream"]:after {content: " ❤ "}
 a.author[href$="Dwarflord"]:after {content: " Fic ETA:____ "}
 a.author[href$="moonomnom"]:after {content: " Dayum shame"}
 a.author[href$="Broken_Wagonwheel"]:after {content: " Sang's Slave "}
+a.author[href$="Dundrioundio"]:after {content: " Never cuddle "}
 
 /* This is to append something to everyone. Remove comments to activate*/
 /*
