--- a/source-css/mylittlepony.css
+++ b/source-css/mylittlepony.css
@@ -1,3 +1,74 @@
+/*
+             @
+            @@u
+          J@. @
+         @@   @u           i21PMMOG8ui
+        @S    YM      r0GZ2vi.      .:7JSN:
+      :@:   P,:@   YNGY.             .:2S@@7
+     7@     @:.@ F@J             1@@S: @ 
+    v@     r@ :@@i               LkXP2i@
+   v@      @: S@                      r@E
+   @      @: i@7            ;v.         .M@.
+  @      @: FU@               U            @B
+ 1q     @r ..B@                             U@ 
+ @     v@ : G@:@      @M           7         1@
+@U     YM rMF  j@@:    @@jvqXuUj5U@X:2        @i
+@r      S: .qJMB. v8U   .5j@@   ,@@@@UXOq.    7@
+@S       SPu;@L      P@1 ,@@      2@,   :M@   :@
+ @         ,@M         @@,O@       @v     ,@. r@
+ @7       . @           @  @@@@.    @       @ @.
+  @.      .:@            @ B@@@     5@      @@L
+  .@;      .@L            Z @u       @      O
+    @@      M@    .i      @ :k      .@@:
+    @.       @@2ik@@      M7 :@u    @  Y@
+    @7       .@@@@@@Y     @:   72PEG@u  Z2
+    Ekv        8@@@@  :jPSBNr        @  @             LBBBMGu
+    @ @k         7@@jSv:            @r Bq            G@.  .;N@@
+    Ji q@v        1,      YNu     .MS @N             @8i      M@
+     @  .B@Y.             :@2i:;U8u.;@              Lq@v       0@    Y.:,
+      @   ,Z@07.            ,7Li,.L@j               FvkO        @BSB@@@@@@
+       B.    7OBB87.         .r1PFqUiJ1JLr:         @L@@        @S  ,P@@G@0SFYJv:
+        2G      .LE@@k:    iEP7.        .:;75XFkuS@@j@ :@.      @7     OO    .E8uq0uSO8.
+          @:        :P@@Zv                     ,:irL@i  r@8: .v@1       Z@  :@@8@@@.M@@@@
+           XJ     uF    iE@Mv                L@@M@LZ@     JGqG1          .  @@@B@@@J .@@@
+            L0    @NjJv:   .SBOr  uOBMEr    k@@@@@810  .                     @@@@@J    @@ir:
+             Mi   @    :75L   E@7@B::i2@@0  @@@@@@ v@               1u,       5E@:     j@.;YqO0.
+              @  @        N2  M7 @:      @@@7 i .   @             :@@@@@                @     :@B:
+              B @.        :M.@Z  SU       :@           U7         @@@@@@,               @.   .  M@@
+             @@r        :B@Lr    @@ ..     7@      SMB@@         u@@@@@@                r        @@@
+             i                  @@@J ,.     @.    E@0PG@          v@@vv                          @@@
+                               v@@@@k.      @    u@8XM@@@u                     rO@BOJ            @@u
+                               U@@  @@M5rru@k    q@@@@@@8 r                   @@@BMM@:          :@  
+                                SO   .vFZXv        ,0@M@                     :@@@@@@@r .        @.  
+                                Eu                  X.                       7OO@@@@v.i:G2     @@@  
+                                7@  ..  .@u        @8@       j@@7        kU      :7  X@    @L @@M@X 
+                                 @E     @F@L     j@i @F     @O .@k      O@@@       1@i@J :@k@  @@@i
+                                  @@,  @5 ,@F   @O....@   j@r :,.O@    @B  u@E   r@X. L@;@: q@ MXX
+                                   @@M@B ,..@N:@j :::.v@ 8E.,:::: j@5 @O ,,..B@,k@i :, @@ .. @Mu@,
+                                    BP,8X ,. @@..::::: @@: :::::.. .B@G ::::, i@@ .::: 8F :,.M.i@
+                                     @J BG , i@ ,:::::..@. ,,...     @:.:::::, @,.:::, @:.:.7B @ 
+                                      @r @F , @X .,,,,. MG           @: ::::::,@:.,.   @  . ZO:@
+                                       @. @:..:@        .@           @. .,,:,. @,     :M    @;E:
+                                       :@ U@ , @r        @.          @.        @.     LE    @ @
+                                        @7 @J  u@        @v          @i        @      kF    M @
+                                        7M 7@ ..@        Y@          ML        @      8L   vFLY
+                                         @  @r. @1       .@          N1        @:     Bi   E,@
+                                         @: 0@  k@        @          UE        @r     B:   M,B
+                                         MP :@..r@        @:         :@        G2     @,   O7Y
+                                         v@  @i .@.       @v         .@        UB     @.  .kS,
+                                          @  @u  @:       qE          @        :@     @:  7LO
+                                          @, @X .@:       7@          @:        @     Oi  k1M
+                                          @i BP .@:.      .@          P0        @.    NY  2OF
+                                          @v @k ,@:,:,,,. .@  ....    .@        BU    vO  X@r
+                                          @v @J 7@ ::::::: @;.::::::,. @: ..... UB .,.:@  8@
+                                          @Y.@. NB ::::::: @U.:::::::: 0M :::::.:@.,:, O7i@@
+                                          rS@@v,@u ,:::::: @O ::::::::,,@,,:::,. @7.7UN@@J
+                                              :U@ZSur:,... E8 ....,,... OS ,:rjFF@@q5v: 
+                                                   .rUuLJYiG8i77777r777;PO7u2L,.                      http://fav.me/d6kc256
+
+RainbowCrash, don't touch ASCII Derpy!
+*/
+
 /* CSS last generated on Sat, 16 Feb 2013 02:05:57 -0600 by UNKNOWN on derpy */
 div.titlebox span.word {display:none}
 div.titlebox .subscribers span.number:after {content:" Faithful Students"}
@@ -81,7 +152,7 @@ border-top-right-radius: 5px;
 {
  margin:0px 5px -12px 0px;
  position:relative;
- top:3px;
+ top:4px;
  left:6px;
 }
 #header-bottom-left{padding-top:20px}
@@ -557,6 +628,9 @@ a[href|="/shiningarmor"],a[href|="/shiningarmour"],a[href|="/a09"],a[href|="/rsh
 .flair-drstable
 {background-position:0 -1600%}
 
+.flair-silverstar
+{background-position:0 -1700%}
+
 a[href|="/priceless"],a[href|="/a10"],a[href|="/rpriceless"],a[href|="/ra10"],a[href|="/ppboring"],a[href|="/b10"],a[href|="/rppboring"],a[href|="/rb10"],a[href|="/rdhappy"],a[href|="/c10"],a[href|="/rrdhappy"],a[href|="/rc10"],a[href|="/rdhuh"],a[href|="/e10"],a[href|="/rrdhuh"],a[href|="/re10"],.flair-twilight,.side .md table tr:nth-of-type(1) td:nth-of-type(3):after
 {background-position:-100% 0}
 
@@ -709,6 +783,8 @@ a[href|="/applederp"],a[href|="/a39"],a[href|="/rapplederp"],a[href|="/ra39"],a[
 
 .flair-mayor
 {background-position:-300% -1600%}
+
+
 
 .side .md table th + th:after {font-weight:normal;}
 .side .md table:nth-of-type(1) th:nth-of-type(1):after {content:"a";}
