--- a/source-css/taviquisition.css
+++ b/source-css/taviquisition.css
@@ -1324,3 +1324,172 @@ a[href|="/tavitea"] {
  background-image: url(%%spritesheet7%%);
  background-position: -0px -900px;  
 } 
+
+a[href|="/octadashhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 220px;
+ height: 150px;
+ background-image: url(%%octadashhug%%); 
+} 
+
+a[href|="/tavifoot"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 113px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -0px;  
+} 
+
+a[href|="/twivinylhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 162px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -150px;  
+} 
+
+a[href|="/twitavifraud"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 107px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -300px;  
+} 
+
+a[href|="/taviworry"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 191px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -450px;  
+} 
+
+a[href|="/tavivinylspoon"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 115px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -600px;  
+} 
+
+a[href|="/tavivinyllove"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 188px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -750px;  
+} 
+
+a[href|="/tavivinylhoodies"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 208px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -900px;  
+} 
+
+a[href|="/tavisocks"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 238px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1050px;  
+} 
+
+a[href|="/tavispitfire"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 168px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1200px;  
+} 
+
+a[href|="/octyvinylhug"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 140px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1350px;  
+} 
+
+a[href|="/nursetavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 150px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1500px;  
+} 
+
+a[href|="/hipstertavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 124px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1650px;  
+} 
+
+a[href|="/experimenting"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 452px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1800px;  
+} 
+
+a[href|="/dresstavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 149px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -1950px;  
+} 
+
+a[href|="/dancingtavi"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 267px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2100px;  
+} 
+
+a[href|="/chibitaviagain"] {  
+ display: block;
+ clear: none;
+ float: left; 
+ width: 159px;
+ height: 150px;
+ background-image: url(%%spritesheet9%%);
+ background-position: -0px -2250px;  
+} 
