--- a/source-css/lyra.css
+++ b/source-css/lyra.css
@@ -1,10 +1,6 @@
 /* coloring */
-#header {background-color:#A4F9DD}
-#sr-header-area {background-color:#C1F2F0;border-bottom:2px solid #3DAD72}
-
-
-
-
+/*#header {background-color:#A4F9DD}
+#sr-header-area {background-color:#C1F2F0;border-bottom:2px solid #3DAD72}*/
 
 
 /* BonBon Heart */
@@ -21,22 +17,16 @@ body .side a[href="http://www.reddit.com/r/BonBon"] {
 }
 
 /* Background */
-
-body, body.res-nightmode:first-of-type {
-    background: url(%%bouncinglyra%%) no-repeat fixed center bottom !important
+body, res-nightmode.body, body.res-nightmode {
+    background: url(%%bouncinglyra%%) no-repeat fixed center bottom!important
     }
 /* Nightmode fixes for the background */
-.content #siteTable div[onclick="click_thing(this)"] {
-    background-color: transparent !important
-    }
-body.res-nightmode:first-of-type > .content {
-    background-color: transparent !important
-    }
-body.res-nightmode:first-of-type {
-    background-color: transparent !important
-    }
+.content #siteTable div[onclick="click_thing(this)"] {background-color: transparent!important;} 
+body.res-nightmode:first-of-type > .content {background-color: transparent!important;}
+.res-nightmode body{background-color: #222222!important;}
+
 /* ---------- Hide emoticon tables in the sidebar until emote is hovered over  ---------- */
-.titlebox em {
+/*.titlebox em {
     color: white
     }
 .titlebox table {
@@ -46,7 +36,7 @@ body.res-nightmode:first-of-type {
 div.usertext-body:hover table {
     display: block;
     clear: both
-    }
+    }*/
 
 a[href|='/hellolyra'], a[href|='/liera'], a[href|='/lyraawesome'], a[href|='/lyrafacehoof'], a[href|='/lyrahappy'], a[href|='/lyrahat'], a[href|='/lyrahey'], a[href|='/lyrashock'], a[href|='/lyrasit'], a[href|='/heartstrings'], a[href|='/lyradat'], a[href|='/lyrasalute'], a[href|='/lyrahugs']    
 {
@@ -73,7 +63,11 @@ a[href|='/lyrahugs'] {width:200px; height:128px; background-position: -0px -506p
 a[href|='/lyrawalk'] { width:102px; height:150px; background-image: url(%%lyrawalk%%); background-position: 0px 0px; display: block; clear: none; float: left; margin-left: 3px; margin-right: 3px; }
 
 a[href|='/implyra'] { width:127px; height:150px; background-image: url(%%implyra%%); display: block; clear: none; float: left; }
+a[href|='/lyrawave'] { width:109px; height:100px; background-image: url(%%lyrawave%%); display: block; clear: none; float: left; }
 
+
+
+a[href^="/"][href*="-in-"],a[href^="/"][href$="-in"],a[href^="/"][href*="-inp-"],a[href^="/"][href$="-inp"]{float:none!important;display: inline-block!important}
 
 /* ---------- Change "Readers" and "users" ---------- */
 .titlebox strong {
@@ -100,4 +94,254 @@ div.titlebox .users-online span.number:after {
 /* ---------- Make the CSS text box bigger ---------- */
 .stylesheet-customize-container textarea {
     height: 600px
+    }
+
+
+/* ---------- Hide "Created by..." while keeping "a community for..." in the sidebar ---------- */
+.titlebox .bottom {
+    font-size: 0px
+    }
+.age {
+    font-size: 11px !important
+    }
+
+/* ---------- Change people's names ---------- */
+
+a.author[href$="Edriss562"] {
+    font-size: 0px !important;
+    display: inline-block;
+    overflow: hidden;
+    vertical-align: bottom
+    }
+a.author[href$="Edriss562"]:after {
+    content: "Esplin";
+    font-size: 10px !important;
+    visibility: visible !important
+    }
+
+.sidecontentbox a.author[href$="Edriss562"]:after { font-size: 10pt !important; }
+
+/* ---------- Banner ---------- */
+#header #header-bottom-left {
+    background: url(%%lyrabenchbanner%%) repeat !important;
+    height: 135px;
+    background-position: -159px 0 !important;
+    }
+
+/* ADD ICONS BASED ON URLS | Tutorial here: http://reddit.com/ls8k4 
+/ Created by Raerth
+/ Inspired by exposur3
+/ ==========================*/
+
+/*Base code, do not adjust*/
+a.title:before {
+  background-image:url(%%iconsprite-ilbat%%);
+  height:16px;
+  width:16px;
+  position:relative;
+  content:"";
+  display:inline-block;
+  margin-right:5px;
+  margin-top:2px;
+  }
+ 
+ 
+/*Reddit (edit in your subreddit name, capitalization important*/
+a[href*="Lyra/comments"].title:before {background-position:-32px 0px;}
+a[href*="reddit.com"].title:before {background-position:-16px -48px;}
+
+/*music*/
+a[href*="grooveshark.com"].title:before {background-position:0px -80px;}
+a[href*="bandcamp.com"].title:before {background-position:0px -16px;}
+a[href*="reverbnation.com"].title:before {background-position:-16px -64px;}
+a[href*="last.fm"].title:before {background-position:-16px -16px;}
+a[href*="soundcloud.com"].title:before {background-position:-16px -80px;}
+a[href*="8tracks.com"].title:before {background-position:-64px -160px;}
+a[href*="ultimate-guitar.com"].title:before {background-position:-80px -96px;}
+a[href*="http://pitchfork.com"].title:before, a[href*="http://pitchforkmedia.com"].title:before {background-position:0px -128px;}
+a[href*="rollingstone.com"].title:before {background-position:-64px -128px;}
+a[href*="popmatters.com"].title:before {background-position:-48px -160px;}
+a[href*="spotify.com"].title:before {background-position:-80px -16px;}
+a[href*="nme.com"].title:before {background-position:-64px -32px;}
+a[href*="pandora.com"].title:before {background-position:-48px -64px;}
+a[href*="turntable.fm"].title:before {background-position: -80px -384px;}
+
+
+/*social media*/
+a[href*="facebook.com"].title:before {background-position:0px -32px;}
+a[href*="twitter.com"].title:before {background-position:-32px -32px;}
+a[href*="myspace.com"].title:before {background-position:-16px -32px;}
+a[href*="delicious.com"].title:before {background-position:0px -144px;}
+a[href*="digg.com"].title:before {background-position:-16px -144px;}
+
+/*reference and learning*/
+a[href*="wikipedia.org"].title:before {background-position:-32px -64px;}
+a[href*="wikimedia.org"].title:before {background-position:-64px -336px;}
+a[href*="ted.com"].title:before {background-position:-80px -48px;}
+a[href*="about.com"].title:before {background-position:-48px -224px;}
+a[href*=".edu"].title:before, a[href*=".ac.uk"].title:before {background-position:-48px -224px;}
+a[href*=".gov"].title:before {background-position:0px -352px;}
+
+/*image hosts*/
+a[href*="flickr.com"].title:before, a[href*="flic.kr"].title:before {background-position:0px -48px;}
+a[href*="imgur.com"].title:before {background-position:-16px 0px;}
+a[href*="deviantart.com"].title:before {background-position:-48px -304px;}
+a[href*="deviantart.net"].title:before {background-position:-48px -304px;}
+a[href*="imageshack.us"].title:before {background-position:0px -224px;}
+a[href*="photobucket.com"].title:before {background-position:-16px -224px;}
+a[href*="twitpic.com"].title:before {background-position:-32px -224px;}
+a[href*="googleusercontent.com"].title:before, a[href*="picasa.google.com"].title:before {background-position:-32px -240px;}
+
+/*video*/
+a[href*="vimeo.com"].title:before {background-position:-32px -48px;}
+a[href*="youtube.com"].title:before, a[href*="youtu.be"].title:before {background-position:-32px -80px;}
+a[href*="break.com"].title:before {background-position:-64px -256px;}
+a[href*="dailymotion.com"].title:before {background-position:-80px -256px;}
+a[href*="megavideo.com"].title:before {background-position:-48px -272px;}
+a[href*="liveleak.com"].title:before {background-position:-64px -272px;}
+a[href*="metacafe.com"].title:before {background-position:-80px -272px;}
+a[href*="veoh.com"].title:before {background-position:-48px -288px;}
+a[href*="videobash.com"].title:before {background-position:-64px -288px;}
+a[href*="worldstarhiphop.com"].title:before {background-position:-80px -288px;}
+
+/*blog*/
+a[href*="tumblr.com"].title:before {background-position:-32px -16px;}
+a[href*="blogspot.com"].title:before {background-position:0px -96px;}
+a[href*="livejournal.com"].title:before {background-position:-32px -320px;}
+a[href*="wordpress.com"].title:before, a[href*="wp.me"].title:before {background-position:-80px -128px;}
+
+/*US news*/
+a[href*="theatlantic.com"].title:before {background-position:-16px -96px;}
+a[href*="bloomberg.com"].title:before {background-position:0px -112px;}
+a[href*="businessinsider.com"].title:before {background-position:-16px -112px;}
+a[href*="reuters.com"].title:before {background-position:-64px -112px;}
+a[href*="washingtonpost.com"].title:before {background-position:-80px -112px;}
+a[href*="csmonitor.com"].title:before {background-position:-16px -128px;}
+a[href*="latimes.com"].title:before {background-position:-48px -144px;}
+a[href*="salon.com"].title:before {background-position:-64px -144px;}
+a[href*="motherjones.com"].title:before {background-position:-32px -160px;}
+a[href*="msnbc.msn.com"].title:before {background-position:-64px 0px;}
+a[href*="theglobeandmail.com"].title:before {background-position:-48px -16px;}
+a[href*="bostonherald.com"].title:before {background-position:-64px -16px;}
+a[href*="huffingtonpost.com"].title:before {background-position:-48px -48px;}
+a[href*="cnn.com"].title:before {background-position:-64px -64px;} 
+a[href*="npr.org"].title:before {background-position:-80px -160px;} 
+a[href*="google.com/hostednews/ap"].title:before {background-position:-0px -176px;} 
+a[href*="dailykos.com"].title:before {background-position:-16px -176px;} 
+a[href*="forbes.com"].title:before {background-position:-32px -176px;} 
+a[href*="ft.com"].title:before {background-position:-48px -176px;} 
+a[href*="abcnews.go.com"].title:before, a[href*="abc.go.com"].title:before {background-position:-80px -176px;} 
+a[href*="marketwatch.com"].title:before {background-position:-16px -192px;} 
+a[href*="wsj.com"].title:before {background-position:-32px -192px;} 
+a[href*="realclearpolitics.com"].title:before {background-position:-48px -192px;} 
+a[href*="thehill.com"].title:before {background-position:-64px -192px;} 
+a[href*="washingtonpost.com"].title:before {background-position:-80px -192px;} 
+a[href*="washingtontimes.com"].title:before {background-position:-0px -208px;} 
+a[href*="politico.com"].title:before {background-position:-16px -208px;} 
+a[href*="usatoday.com"].title:before {background-position:-32px -208px;} 
+a[href*="newsmax.com"].title:before {background-position:-48px -208px;} 
+a[href*="theblaze.com"].title:before {background-position:-64px -208px;} 
+a[href*="boston.com"].title:before {background-position:-80px -208px;} 
+
+/*world news*/
+a[href*="bbc.co.uk/news"].title:before, a[href*="bbc.co.uk/programmes"].title:before {background-position:-32px -96px;}
+a[href*="independent.co.uk"].title:before {background-position:-48px -96px;}
+a[href*="cbc.ca"].title:before {background-position:-32px -112px;}
+a[href*="dw-world.de"].title:before {background-position:-32px -144px;}
+a[href*="rte.ie"].title:before {background-position:-80px -144px;}
+a[href*="spiegel.de"].title:before {background-position:0px -160px;}
+a[href*="economist.com"].title:before {background-position:-48px 0px;}
+a[href*="sky.com"].title:before {background-position:-80px 0px;}
+a[href*="guardian.co.uk"].title:before {background-position:-48px -32px;}
+a[href*="telegraph.co.uk"].title:before {background-position:-80px -64px;}
+a[href*="presseurop.eu"].title:before {background-position:-64px -80px;} 
+a[href*="channel4.com"].title:before {background-position:-64px -48px;} 
+a[href*="globalpost.com"].title:before {background-position:0px -320px;} 
+a[href*="haaretz.com"].title:before {background-position:-16px -320px;} 
+
+/*sci & tech news*/
+a[href*="techdirt.com"].title:before {background-position:-80px -32px;}
+a[href*="engadget.com"].title:before {background-position:-64px -240px;}
+a[href*="gizmodo.com"].title:before {background-position:-80px -240px;}
+a[href*="mashable.com"].title:before {background-position:0px -256px;}
+a[href*="techcrunch.com"].title:before {background-position:-16px -256px;}
+a[href*="arstechnica.com"].title:before {background-position:-32px -302px;}
+a[href*="nasa.com"].title:before {background-position:-80px -320px;}
+a[href*="pcmag.com"].title:before {background-position:0px -336px;}
+a[href*="physorg.com"].title:before {background-position:0px -336px;}
+a[href*="discovery.com"].title:before {background-position:-32px -368px;}
+a[href*="eurekalert.org"].title:before {background-position:-48px -368px;}
+a[href*="nature.com"].title:before {background-position:-64px -368px;}
+a[href*="newscientist.com"].title:before {background-position:-80px -368px;}
+a[href*="popsci.com"].title:before {background-position:0px -384px;}
+a[href*="sciencedaily.com"].title:before {background-position:-16px -384px;}
+a[href*="torrentfreak.com"].title:before {background-position:-32px -384px;}
+a[href*="wired.com"].title:before {background-position:-48px -384px;}
+
+/*entertainment*/
+a[href*="imdb.com"].title:before {background-position:-48px -80px;}
+a[href*="comedy.co.uk"].title:before {background-position:-16px -160px;}
+a[href*="boingboing.net"].title:before {background-position:-48px -240px;}
+a[href*="tmz.com"].title:before {background-position:-32px -256px;}
+a[href*="deadline.com"].title:before {background-position:-48px -256px;}
+a[href*=".ew.com"].title:before {background-position:0px -272px;}
+a[href*="hollywoodreporter.com"].title:before {background-position:-16px -272px;}
+a[href*="rottentomatoes.com"].title:before {background-position:-16px -288px;}
+a[href*="variety.com"].title:before {background-position:-32px -288px;}
+a[href*="aintitcool.com"].title:before {background-position:0px -304px;}
+a[href*="theonion.com"].title:before {background-position:-48px -336px;}
+a[href*="slashfilm.com"].title:before {background-position:-80px -336px;}
+
+/*internet*/
+a[href*="maps.google.com"].title:before, a[href*="g.co/maps"].title:before {background-position:0px -64px;}
+a[href*="google.com"].title:before, a[href*="goo.gl"].title:before {background-position:-64px -176px;} 
+a[href*="apple.com"].title:before {background-position:-64px -224px;}
+a[href*="ask.com"].title:before {background-position:-80px -224px;}
+a[href*="bing.com"].title:before {background-position:0px -240px;}
+a[href*="microsoft.com"].title:before, a[href*="msn.com"].title:before {background-position:-16px -240px;}
+a[href*="amazon.com"].title:before, a[href*="amazon.co.uk"].title:before {background-position:-16px -304px;}
+a[href*="ebay.com"].title:before, a[href*="ebay.co.uk"].title:before {background-position:-48px -304px;}
+a[href*="etsy.com"].title:before {background-position:-80px -304px;}
+a[href*="mozilla.com"].title:before {background-position:-64px -320px;}
+a[href*="welovefine.com"].title:before {background-position:0px -400px;}
+
+/*media*/
+a[href*="radiotimes.com"].title:before {background-position:-64px -96px;}
+a[href*="bbc.co.uk/iplayer"].title:before {background-position:-48px -112px;}
+a[href*="itv.com"].title:before {background-position:-48px -128px;}
+a[href*="hulu.com"].title:before {background-position:-32px -272px;}
+a[href*="netflix.com"].title:before {background-position:0px -288px;}
+
+/*shitlist*/
+a[href*="dailymail.co.uk"].title:before, a[href*="thesun.co.uk"].title:before, a[href*="mirror.co.uk"].title:before, a[href*="dailystar.co.uk"].title:before, a[href*="foxnews.com"].title:before, a[href*="freerepublic.com"].title:before, a[href*="perezhilton.com"].title:before , a[href*="gawker.com"].title:before {background-position:-32px -128px;}
+
+/*spam*/
+a[href*="examiner.com"].title:before, a[href*="exm.nr"].title:before, a[href*="bitly"].title:before, a[href*="bit.ly"].title:before, a[href*="thespreadit.com"].title:before, a[href*="rnbmusicblog"].title:before, a[href*="logs.omegle.com"].title:before, a[href*="tinyurl"].title:before, a[href*="my.opera.com"].title:before,  a[href*="cinemaroll.com"].title:before, a[href*="adf.ly"].title:before{background-position:-32px -336px;}
+
+
+/* unassigned icons */
+spam_icon {background-position:-32px -336px;}
+cross_icon {background-position:-16px -352px;}
+sad_icon {background-position:-32px -352px;}
+happy_icon {background-position:-48px -352px;}
+star_icon {background-position:-64px -352px;}
+stop_icon {background-position:-80px -352px;}
+tick_icon {background-position:0px -368px;}
+warn_icon {background-position:-16px -368px;}
+pdf_icon {background-position:-64px -384px;}
+
+
+
+/* ---------- Replace reddit alien thumbnails ---------- */
+.thumbnail.self, .thumbnail.nsfw, .thumbnail.default {
+    background-image: url(%%lyraicons%%) !important
+    }
+.thumbnail.self {
+    background-position: 0px -129px !important
+    }
+.thumbnail.nsfw {
+    background-position: 0px 0px !important
+    }
+.thumbnail.default {
+    background-position: 0px -73px !important
     }
