--- a/source-css/mlplounge.css
+++ b/source-css/mlplounge.css
@@ -210,10 +210,10 @@ h3.imgTitle{
  display:block;
  width:74px;
  height:80px;
- background:url(%%filly-twilight%%);
+ background:url(%%cadancefilly%%);
  position:fixed; 
  top:260px;
- right:-10px;
+ right:-5px;
  z-index:999
 }
 body{background:url(%%scoots-bg%%) no-repeat fixed center center}
